<resources>
    <string name="app_name">Android Praktikum 11</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="call">Call</string>
</resources>
