<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".StudentActivity">

    <EditText
        android:id="@+id/student_id"
        android:hint="@string/student_id"
        android:autofillHints="@string/student_id"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/student_name"
        android:hint="@string/student_name"
        android:autofillHints="@string/student_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/student_phone"
        android:hint="@string/phone_number"
        android:autofillHints="@string/phone_number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="phone"/>

    <Button
        android:id="@+id/save_button"
        android:layout_gravity="center"
        android:text="@string/save"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/call_button"
        android:layout_gravity="center"
        android:text="@string/call"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
</LinearLayout>