<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/r_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/r_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/r_student_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="24sp" />
    <Button
        android:id="@+id/back_button"
        android:layout_gravity="center"
        android:text="@string/back"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
</LinearLayout>