<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textMail"
        android:hint="@string/email"
        android:autofillHints="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <Button
        android:id="@+id/loginBt"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>